--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <aside class="col-12 col-md-4 mb-3">
             <div class="card text-center shadow">
               <div class="card-body">
-                <i class="bi bi-chat-dots-fill fs-1 text-primary"></i>
+                <i class="bi bi-chat-dots-fill fs-1 text-secondarygit"></i>
                 <h5 class="card-title">Atencion al cliente</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
