agregamos maquetado de pag historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -62,7 +62,26 @@
       </nav>
     </header>
     <main>
-      <br />
+      <section class="container-fluid">
+        <h1 class="text-center display-1">NUESTRA HISTORIA</h1>
+        <hr />
+        <article class="row">
+          <aside class="col-12 col-md-6">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur itaque ipsa quis labore rem nemo velit, fugiat
+              commodi voluptatibus expedita minima repellendus? Eos cumque
+              maxime similique saepe ipsam placeat ipsa quisquam! Delectus animi
+              eveniet aspernatur repellat perspiciatis quae consectetur porro.
+              Rerum fugit doloribus corporis exercitationem! Id reprehenderit
+              voluptas facilis? Sunt.
+            </p>
+          </aside>
+          <aside class="col-12 col-md-6">
+            <img src="/img/historia.png" alt="historia1" class="w-100">
+          </aside>
+        </article>
+      </section>
     </main>
     <footer class="bg-dark">
       <section class="container text-white-50 d-flex justify-content-between">
