agregamos maquetado historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -78,7 +78,7 @@
             </p>
           </aside>
           <aside class="col-12 col-md-6">
-            <img src="/img/historia.png" alt="historia1" class="w-100">
+            <img src="/img/historia.png" alt="historia1" class="w-75" />
           </aside>
         </article>
       </section>
