--- a/pages/historia.html
+++ b/pages/historia.html
@@ -62,7 +62,7 @@
       </nav>
     </header>
     <main>
-      <section class="container-fluid">
+      <section class="container">
         <h1 class="text-center display-1">NUESTRA HISTORIA</h1>
         <hr />
         <article class="row">
