cambie de color el parrafo del index

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <section class="my-5 container">
         <h1 class="display-1 text-center">Sobre Nosotros</h1>
         <hr />
-        <p>
+        <p class="text-danger">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi
           laudantium quod recusandae corporis accusamus ea natus veritatis.
           Corrupti iusto mollitia excepturi officiis aperiam aliquam nam porro,
