cambio color parrafo

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <section class="my-5 container">
         <h1 class="display-1 text-center">Sobre Nosotros</h1>
         <hr />
-        <p class="text-danger">
+        <p >
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi
           laudantium quod recusandae corporis accusamus ea natus veritatis.
           Corrupti iusto mollitia excepturi officiis aperiam aliquam nam porro,
@@ -198,65 +198,7 @@
                   the bulk of the card's content.
                 </p>
               </div>
-            </div>
-          </aside>
-          <aside class="col-12 col-md-4 mb-3">
-            <div class="card text-center shadow">
-              <div class="card-body">
-                <i class="bi bi-chat-dots-fill fs-1 text-primary"></i>
-                <h5 class="card-title">Atencion al cliente</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
-            </div>
-          </aside>
-        </article>
-      </section>
-      <section class="container my-5">
-        <article class="row justify-content-center">
-          <div class="card mb-2 col-12 col-md-4 mb-3 mb-2">
-            <img src="img/dulce.png" class="card" alt="dulce" />
-          </div>
-          <div class="card mb-2 col-12 col-md-4 mb-3">
-            <img src="img/salado.png" class="card" alt="salado" />
-          </div>
-          <div class="card mb-2 col-12 col-md-4 mb-3">
-            <img src="img/panyfactura.png" class="card" alt="panyfactura" />
-          </div>
-        </article>
-      </section>
-    </main>
-    <footer class="bg-dark py-4">
-      <div class="container">
-        <div class="row mx-2 justify-content-between">
-          <div
-            class="col-12 col-md-4 d-flex align-items-center justify-content-center justify-content-md-start"
-          >
-            <img
-              class=""
-              src="img/cocu_logo-450.png"
-              width="120px"
-              alt="logo de la empresa"
-            />
-          </div>
-          <div class="col-12 col-md-4">
-            <h5 class="text-secondary">Horarios de atencion:</h5>
-            <ul class="text-secondary">
-              <li>Lunes a viernes: 09hs-18hs</li>
-              <li>Sabados, Domingos y Feriados: 09hs-14hs</li>
-            </ul>
-          </div>
-          <div class="col-12 col-md-4">
-            <h5 class="text-secondary">Siguenos en nuestras redes:</h5>
-            <a href="#" class="text-secondary"
-              ><i class="bi bi-whatsapp"></i
-            ></a>
-            <a href="#" class="text-secondary"
-              ><i class="bi bi-instagram"></i
-            ></a>
-            <a href="#" class="text-secondary"><i class="bi bi-twitter"></i></a>
+            </div>git 
           </div>
         </div>
       </div>
